add Alarm manager and Notification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <!-- TODO BUG android:theme="@style/AppTheme.NoActionBarShadow" -->
         <activity android:name=".TodoEditActivity"
                   android:theme="@style/AppTheme.NoActionBarShadow" />
+
+        <receiver android:name=".AlarmReceiver"/>
     </application>
 
 </manifest>
